# 3_Course_CGLab4

./: .gitignore  CMakeLists.txt  README.md  application.hpp  buffer.hpp  camera.hpp  cgLabs  diffuse_light.hpp  functions.hpp  index_buffer.hpp  light_source.hpp  lights_manager.hpp  main.cpp  mesh.hpp  normals_buffer.hpp  obj_loader.hpp  renderer.hpp  shader.hpp  texture.hpp  texture_buffer.hpp  vertex.hpp  vertex_array.hpp  vertex_buffer.hpp  window.hpp
Buffers/: index_buffer.hpp  vertex_array.hpp
libs/: loguru.cpp
libs/assimp/contrib/zlib/contrib/minizip/: ioapi.h
libs/assimp/test/models-nonbsd/3D/: mar_rifle.uc
libs/assimp/test/models/3D/: box.uc
libs/tinyobjloader/experimental/: tinyobj_loader_opt.h
resources/: Crate1.mtl
shaders/: assimp_compatible_shader.glsl  basic_layout_shader.glsl  basic_lighting_shader.glsl  basic_lighting_shader_tex.glsl  basic_lightmaps_shader.glsl  basic_texture_shader.glsl  multi_light_shader.glsl  multiple_diffuse_shader.glsl  multiple_diffuse_shader_color.glsl  multiple_diffuse_shader_tex.glsl
